feat(core): complete progression v2